feat: logging appender 설정(#36)
- prod 환경에서 file-appender 를 이용한 로깅 설정
- 로그 레벨에 따른 로그 분류
- 일별 최대 100MB, 최대 10개 파일 생성, 최대 크기 1GB 설정
- prod 환경 아닌 경우, console-appender 를 로깅 설정
- ansi 출력 비활성화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     username: root
     password: concert2025
     driver-class-name: com.mysql.cj.jdbc.Driver
+  output:
+    ansi:
+      enabled: never
 queue:
   processing:
     capacity: 30
