feat: HTTP Request 로깅 로직 추가(#37)
- MDC 를 사용한 request-id 추가
- request url, header, body 로깅 추가

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     username: root
     password: concert2025
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+logging:
+  level:
+    com.cooper.concert: info
+
 queue:
   processing:
     capacity: 30
