refactor: 메인 코드 yml 프로퍼티 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,16 +11,18 @@ spring:
     username: root
     password: concert2025
     driver-class-name: com.mysql.cj.jdbc.Driver
-  data:
-    redis:
-      host: localhost
-      port: 6379
-processing:
-  queue:
+queue:
+  processing:
     capacity: 30
-  token:
+    rate:
+      minutes: 1
+token:
+  processing:
     valid:
       minutes: 5
+  expire:
+    rate:
+      minutes: 1
 concert:
   schedules:
     read:
