fix: 로그 메세지 한글 출력 깨짐(#40)
- 증상 : 로그 파일에서 한글 깨짐 이슈
- 원인 : API Response 로그를 위한 캐싱한 byte code 가 인코딩을 잘못 인식하는 문제
- 개선
   - servlet charset 강제 설정 적용
   - appender encoding option : UTF-8 로 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
   output:
     ansi:
       enabled: never
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
 queue:
   processing:
     capacity: 30
