feat: 샘플 데이터 추가 및 관련 프로퍼티 추가(#42)
- data.sql : 샘플 데이터 파일
- 프로퍼티 추가
   - spring.jpa.defer-datasource-initialization=true
   - spring.sql.init.mode=always

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: create-drop
+    defer-datasource-initialization: true
   datasource:
     url: jdbc:mysql://localhost:3306/concert_db
     username: root
@@ -14,6 +15,9 @@ spring:
   output:
     ansi:
       enabled: never
+  sql:
+    init:
+      mode: always
 server:
   servlet:
     encoding:
