feat: scheduler 주기 재설정(#43)
- 스케줄 주기 : 1min -> 10s 로 변경

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -18,15 +18,13 @@ logging:
 queue:
   processing:
     capacity: 30
-    rate:
-      minutes: 1
+    rate: 10
 token:
   processing:
     valid:
       minutes: 5
   expire:
-    rate:
-      minutes: 1
+    rate: 10
 concert:
   schedules:
     read:
