--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,15 +26,13 @@ server:
 queue:
   processing:
     capacity: 30
-    rate:
-      minutes: 1
+    rate: 10
 token:
   processing:
     valid:
       minutes: 5
   expire:
-    rate:
-      minutes: 1
+    rate: 10
 concert:
   schedules:
     read:
