--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,10 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-testcontainers")
     testImplementation("org.testcontainers:junit-jupiter")
     testImplementation("org.testcontainers:mysql")
+
+    // Shed lock
+    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:6.2.0'
+    implementation 'net.javacrumbs.shedlock:shedlock-spring:6.2.0'
 }
 
 bootJar {
