test: 테스트 완료 후, TestContainer 자원 미회수 이슈(#56)

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     show-sql: true
     open-in-view: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
   datasource:
     url: jdbc:tc:mysql:8://concert_db
     username: root
