feat: Spring AOP 기반 분산락 도입 (#58)
- Annotation 기반 DistributedLockAop 적용
- gradle 기반 빌드시, 파라미터 정보 포함 옵션 추가
- 낙관적 락 사용을 위한 인터페이스 변경
- Facade 트랜잭션 분리

--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ clean {
     delete file(querydslSrcDir)
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.generatedSourceOutputDirectory = file(querydslSrcDir)
+    options.compilerArgs << "-parameters"
 }
