feat: 콘서트 좌석 개별 캐싱 방식 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,3 +47,10 @@ concert:
   schedules:
     read:
       limit: 10
+    cache:
+      format: 'concert:%s:schedules:'
+      ttl:  300 # seconds
+    available-seats:
+      cache:
+        format: 'concertSchedules:%s:seats:'
+        ttl:  300 # seconds
