feat: kafka container & 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-testcontainers")
     testImplementation("org.testcontainers:junit-jupiter")
     testImplementation("org.testcontainers:mysql")
+    testImplementation("org.testcontainers:kafka:1.20.4")
 
     // Shed lock
     implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:6.2.0'
@@ -106,6 +107,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
+
+    // kafka
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 bootJar {
