--- a/docker/prometheus/config/prometheus.yml
+++ b/docker/prometheus/config/prometheus.yml
@@ -32,3 +32,12 @@ scrape_configs:
     static_configs:
       - targets:
         - 172.10.0.14:9308
+  - job_name: otel_collector
+    honor_timestamps: true
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    metrics_path: /metrics
+    scheme: http
+    static_configs:
+      - targets:
+          - collector:8889
