build: 부하테스트를 위한 세팅 추가

--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,7 @@ dependencies {
 
     // monitoring
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 bootJar {
